# doppler

./: .env.example  .gitignore  .gitmodules  AGENTS.md  ANONCOIN_BENEFICIARIES_FIX.md  ANONCOIN_FEE_INVESTIGATION.md  Airlock.md  CLAUDE.md  Deployments.json  Deployments.md  Makefile  README.md  TestScenarios.sh  check-pool-status.ts  deployments.config.toml  deployments.toml  deploymentsTracker.ts  foundry.toml  generateDeploymentDocs.ts  lcov.info  notes.org  package.json  remappings.txt  split_hex.py  tsconfig.json
skills-main/: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
skills-main/.claude-plugin/: marketplace.json
skills-main/.github/: dependabot.yml
skills-main/.github/ISSUE_TEMPLATE/: trophy-case.yml
skills-main/.github/workflows/: lint.yml  validate.yml
skills-main/plugins/ask-questions-if-underspecified/: README.md
skills-main/plugins/ask-questions-if-underspecified/.claude-plugin/: plugin.json
skills-main/plugins/audit-context-building/.claude-plugin/: plugin.json
skills-main/plugins/building-secure-contracts/: README.md
skills-main/plugins/building-secure-contracts/.claude-plugin/: plugin.json
skills-main/plugins/burpsuite-project-parser/: README.md
skills-main/plugins/dwarf-expert/: README.md
skills-main/plugins/entry-point-analyzer/: README.md
skills-main/plugins/fix-review/: README.md
skills-main/plugins/fix-review/commands/: fix-review.md
skills-main/plugins/semgrep-rule-creator/: README.md
skills-main/plugins/static-analysis/: README.md
skills-main/plugins/testing-handbook-skills/: README.md
(+1136 files in other folders)
